# importmagic

./: .coveragerc  .gitignore  .travis.yml  CHANGES  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  runtests.py  setup.py
.github/workflows/: ci.yml  release.yml
importmagic/: __init__.py  cli.py  conftest.py  importer.py  importer_test.py  index.py  index_test.py  six.py  symbols.py  symbols_test.py  test_index.json  util.py
