[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "importmagic"
version = "0.2.0"
description = "Python Import Magic - automagically add, remove and manage imports"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
authors = [{ name = "Alec Thomas", email = "alec@swapoff.org" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/alecthomas/importmagic"

[project.scripts]
importmagic = "importmagic.cli:main"

[tool.pytest.ini_options]
addopts = "--tb=short"
norecursedirs = ["__pycache__", "*venv*", ".git", "build"]

[tool.coverage.run]
omit = ["*_test.py", "*six.py"]
